# aind-ccf-registration

./: .gitignore  README.md  pyproject.toml
.codeocean/: resources.json
.github/workflows/: ci.yml  tag.yml  tag_and_publish.yml
code/: install_pkgs.sh  main.py  main_register_dataset.py  register_ccf_to_brain.ipynb  register_datasets.py  run  template_based_ccf_registration.md
code/aind_ccf_reg/: __init__.py  configs.py  ng_utils.py  plots.py  preprocess.py  register.py  utils.py
code/aind_ccf_reg/ccf_files/: annotation_map.json
code/src/aind_ccf_reg/: __init__.py  convertfile.py  register.py  register_only.py
code/tests/: test_ccf_registration.py
doc_template/source/: conf.py
environment/: Dockerfile  Dockerfile_local  environment.yml
metadata/: metadata.yml
src/ccf_reg/: register.py
tests/: test_ccf_registration.py
