[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_ccf_reg"
description = "Prints messages to stdout. Simple boilerplate for libraries."
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
  'argschema==3.0.4',
  'dask==2022.10.2',
  'antspyx==0.4.2',
  'scikit-image==0.19.3',
  'tifffile==2022.10.10',
  'zarr==2.13.3'
]

[project.optional-dependencies]
dev = [
  'black',
  'coverage',
  'flake8',
  'interrogate',
  'isort',
  'furo',
  'Sphinx'
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_ccf_reg.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["code/aind_ccf_reg", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 0

[tool.isort]
line_length = 79

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
