[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_ccf_reg"
description = "Prints messages to stdout. Simple boilerplate for libraries."
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
  'antspyx==0.4.2',
  'argschema==3.0.4',
  's3fs==2022.11.0',
  'scikit-image==0.19.3',
  'tifffile==2022.10.10',
  'bokeh==2.4.2',
  'zarr==2.13.3',
  'aind-data-schema==0.22.1',
  'xarray_multiscale==1.1.0',
  'dask[distributed]==2022.11.1',
  'matplotlib==3.7.3',
  'ome-zarr==0.8.2',
  'natsort==8.4.0',
  'aicsimageio@git+https://github.com/camilolaiton/aicsimageio.git@feature/zarrwriter-multiscales-daskjobs'
]

[project.optional-dependencies]
dev = [
  'black',
  'coverage',
  'flake8',
  'interrogate',
  'isort',
  'furo',
  'Sphinx'
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_ccf_reg.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["code/aind_ccf_reg", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 0

[tool.isort]
line_length = 79

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
